# inferex

./: .gitignore  README.md  install-inferex.py  pyproject.toml  requirements.txt  setup.py
examples/dalle/: dependencies.sh  inferex.yaml  pipeline.py  requirements.txt
examples/face_detection/: inferex.yaml  pipeline.py  requirements.txt
examples/ml/keras/: inferex.yaml  pipeline.py  train.py
examples/ml/keras/fixtures/: digit_5.json
examples/ml/sklearn/: inferex.yaml  pipeline.py  requirements.txt  train.py
examples/ml/sklearn/fixtures/: predict.json
examples/ml/tensorflow/: inferex.yaml  pipeline.py  requirements.txt  train.py
examples/ml/torch/: README.md  inferex.yaml  pipeline.py  requirements.txt
examples/ml/torch_lightning/: inferex.yaml  pipeline.py  requirements.txt  train.py
examples/sentiment_analysis/: README.md  inferex.yaml  pipeline.py  requirements.txt
examples/simple_function/: README.md  inferex.yaml  pipeline.py  requirements.txt
examples/text_classification/: inferex.yaml  pipeline.py  requirements.txt
examples/text_generation/: README.md  inferex.yaml  pipeline.py  requirements.txt
examples/whisper/: README.md  dependencies.sh  inferex.yaml  pipeline.py
examples/yolov5/: dependencies.sh  inferex.yaml  pipeline.py  requirements.txt
inferex/: __init__.py  __main__.py  cli.py  settings.py  utils.py
inferex/api/: client.py
inferex/cli/: __init__.py  display.py  terminal_format.py  utils.py
inferex/cli/commands/: deployments.py  pipelines.py  projects.py
inferex/common/: project.py
inferex/decorator/inferex/: __init__.py  decorators.py
inferex/deployments/: cli.py
inferex/endpoints/: cli.py
inferex/help/: help_texts.py
inferex/io/: __init__.py  config.py  git.py  human.py  output.py  table.py  termformat.py  token.py  utils.py
inferex/projects/: cli.py
inferex/sdk/: exceptions.py  http.py  logs.py  settings.py  validation.py
inferex/sdk/resources/: base_models.py  deployment.py  deployments.py  logs.py  pipeline.py  project.py  projects.py
inferex/subapp/: auth.py  delete.py  deploy.py  get.py  info.py  login.py  logs.py
inferex/template/: validation.py  yaml.py
inferex/utils/io/: __init__.py  compression.py  git.py  logs.py  output.py  scanning.py  utils.py
